# mojorag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_RU.md  docker-compose.yml  pyproject.toml  requirements.txt
prompts/: answer.j2  answer_strict.j2
scripts/: download_models.py
src/mojo/: bindings.mojo  chunker.mojo  search.mojo
src/python/: __init__.py  config.py  embedder.py  generator.py  ingester.py  main.py  orchestrator.py  retriever.py  server.py
tests/: __init__.py  test_e2e.py  test_search.py
